--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <groupId>org.eclipse.hudson.main</groupId>
     <artifactId>hudson-test-ui</artifactId>
     <name>Hudson :: UI Integration Testing</name>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.2.0-SNAPSHOT</version>
     <description>
         Hudson UI Integration Testing
     </description>
@@ -39,10 +39,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.eclipse.hudson.main</groupId>
+            <groupId>org.eclipse.hudson</groupId>
             <artifactId>hudson-war</artifactId>
             <!--TODO find way how to specify range [2.1.0,2.2.0),  we should take the latest snapshot -->
-            <version>3.0.0-SNAPSHOT</version>
+            <version>3.2.0-SNAPSHOT</version>
             <type>war</type>
             <scope>test</scope>
         </dependency>
@@ -84,7 +84,7 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.eclipse.hudson.main</groupId>
+                                    <groupId>org.eclipse.hudson</groupId>
                                     <artifactId>hudson-war</artifactId>
                                     <type>war</type>
                                     <overWrite>true</overWrite>
