--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <properties>
         <junit.version>4.8.1</junit.version>
         <selenium.version>2.39.0</selenium.version>
-        <jetty-version>6.1.26</jetty-version>
+        <jetty-version>9.1.3.v20140225</jetty-version>
         <hudson.home>${basedir}/target/work</hudson.home>
         <jetty.stop.port>6001</jetty.stop.port>
         <test.target.host>localhost</test.target.host>
@@ -47,6 +47,21 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+	<groupId>org.hudsonci.plugins</groupId>
+	<artifactId>birt-charts</artifactId>
+	<version>3.0.3</version>
+        </dependency>
+        <dependency>
+	<groupId>org.hudsonci.plugins</groupId>
+	<artifactId>jna-native-support-plugin</artifactId>
+	<version>3.0.4</version>
+        </dependency>
+        <dependency>
+	<groupId>org.hudsonci.xpath</groupId>
+	<artifactId>xpath-provider</artifactId>
+	<version>1.0.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>${selenium.version}</version>
@@ -61,7 +76,7 @@
     </dependencies>
     <build>
         <plugins>
-            <!-- TODO find reason why jetty doesn't start without it -->
+            <!-- TODO find reason why jetty doesn't start without it  -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -91,6 +106,27 @@
                                     <outputDirectory>${project.build.directory}</outputDirectory>
                                     <destFileName>hudson.war</destFileName>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.hudsonci.plugins</groupId>
+	                            <artifactId>birt-charts</artifactId>
+                                    <type>hpi</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${hudson.home}/plugins</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.hudsonci.plugins</groupId>
+                                    <artifactId>jna-native-support-plugin</artifactId>
+                                    <type>hpi</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${hudson.home}/plugins</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.hudsonci.xpath</groupId>
+	                            <artifactId>xpath-provider</artifactId>
+                                    <type>hpi</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${hudson.home}/plugins</outputDirectory>
+                                </artifactItem>
                             </artifactItems>
                             <overWriteReleases>true</overWriteReleases>
                             <overWriteSnapshots>true</overWriteSnapshots>
@@ -99,32 +135,63 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
-                <version>${jetty-version}</version>
-                <configuration>
-                    <scanIntervalSeconds>2</scanIntervalSeconds>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${hudson.home}</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/src/test/preset-data/</directory>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                 <artifactId>jetty-maven-plugin</artifactId>
+                 <version>${jetty-version}</version>
+                 <configuration>
+                    <httpConnector>
+                        <host>${test.target.host}</host>
+                        <port>${test.target.port}</port>
+                        <idleTimeout>60000</idleTimeout>
+                    </httpConnector>
+
                     <stopPort>${jetty.stop.port}</stopPort>
-                    <stopKey>stop-webserver</stopKey>
-                    <connectors>
-                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                            <port>${test.target.port}</port>
-                            <maxIdleTime>60000</maxIdleTime>
-                        </connector>
-                    </connectors>
-                    <webAppConfig>
-                        <extraClasspath>${basedir}/src/test/resources/</extraClasspath>
-                    </webAppConfig>
-                    <webApp>target/hudson.war</webApp>
-                    <contextPath>/${test.target.contextroot}</contextPath>
+                    <stopKey>jetty-stop</stopKey>
+                                       
+                    <war>${basedir}/target/hudson.war</war>
+                    
+                    <testClassesDirectory>${basedir}/src/test/resources</testClassesDirectory>
+                    <useTestClasspath>true</useTestClasspath>
+                    
+                    <consoleForceReload>true</consoleForceReload>
+                    
+                    <loginServices>
+                        <loginService implementation="org.eclipse.jetty.security.HashLoginService">
+                            <name>default</name>
+                            <config>${basedir}/src/realm.properties</config>
+                        </loginService>
+                    </loginServices>
                     <systemProperties>
                         <systemProperty>
                             <name>HUDSON_HOME</name>
                             <value>${hudson.home}</value>
                         </systemProperty>
                     </systemProperties>
-                </configuration>
-                <executions>
+                 </configuration>
+                 <executions>
                     <execution>
                         <id>start-jetty</id>
                         <phase>pre-integration-test</phase>
@@ -133,6 +200,7 @@
                         </goals>
                         <configuration>
                             <daemon>true</daemon>
+                            <reload>manual</reload>
                         </configuration>
                     </execution>
                     <execution>
@@ -144,7 +212,6 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
