--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,6 @@
 
     <properties>
         <junit.version>4.8.1</junit.version>
-        <selenium.version>2.39.0</selenium.version>
         <jetty-version>9.1.3.v20140225</jetty-version>
         <hudson.home>${basedir}/target/work</hudson.home>
         <jetty.stop.port>6001</jetty.stop.port>
@@ -46,6 +45,7 @@
             <type>war</type>
             <scope>test</scope>
         </dependency>
+        <!-- Core Compatabiltiy Plugins -->
         <dependency>
 	<groupId>org.hudsonci.plugins</groupId>
 	<artifactId>birt-charts</artifactId>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>${selenium.version}</version>
+            <version>2.39.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
