--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,6 @@
     </description>
 
     <properties>
-        <junit.version>4.8.1</junit.version>
-        <jetty-version>9.1.3.v20140225</jetty-version>
         <hudson.home>${basedir}/target/work</hudson.home>
         <jetty.stop.port>6001</jetty.stop.port>
         <test.target.host>localhost</test.target.host>
@@ -45,7 +43,7 @@
             <type>war</type>
             <scope>test</scope>
         </dependency>
-        <!-- Core Compatabiltiy Plugins -->
+        <!-- Core Compatability Plugins -->
         <dependency>
 	<groupId>org.hudsonci.plugins</groupId>
 	<artifactId>birt-charts</artifactId>
@@ -70,7 +68,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -160,7 +158,7 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                  <artifactId>jetty-maven-plugin</artifactId>
-                 <version>${jetty-version}</version>
+                 <version>9.1.3.v20140225</version>
                  <configuration>
                     <httpConnector>
                         <host>${test.target.host}</host>
